src/NekoScriptParser.js
// Generated from NekoScript.g4 by ANTLR 4.13.0
// jshint ignore: start
const antlr4 = require('antlr4');
const { NekoScriptListener } = require('./NekoScriptListener');
const { NekoScriptVisitor } = require('./NekoScriptVisitor');

// Ajout d'une définition manquante pour ATN
if (!antlr4.atn) {
  antlr4.atn = {};
}
if (!antlr4.atn.ATN) {
  antlr4.atn.ATN = {
    INVALID_ALT_NUMBER: -1
  };
}



const atn = new antlr4.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

class NekoScriptParser extends antlr4.Parser {

    static grammarFileName = "NekoScript.g4";
    static literalNames = [ null, "'='", "';'", "'compteneko'", "'neko'", 
                            "'('", "')'", "'nekimg'", "'plus'", "'moins'", 
                            "'multiplier'", "'diviser'", "'nek'", "','", 
                            "'nekImporter'", "'neksite.cr\\u00E9er'", "'script'", 
                            "'{'", "'}'", "'contenu'", "':'", "'titre'", 
                            "'lang'", "'couleur-de-fond'", "'style'", "'nekSi'", 
                            "'nekSinon'", "'est'", "'plusGrandQue'", "'plusPetitQue'", 
                            "'nekBoucle'", "'de'", "'\\u00E0'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, "ID", "NUMBER", "STRING", "COMMENT", 
                             "WS" ];
    static ruleNames = [ "program", "statement", "variableDeclaration", 
                         "expressionStatement", "expression", "numExpression", 
                         "functionDeclaration", "paramList", "functionCall", 
                         "argList", "importStatement", "webSiteDeclaration", 
                         "webSiteBlock", "webSiteProperty", "styleBlock", 
                         "styleProperty", "ifStatement", "condition", "loopStatement", 
                         "block" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = NekoScriptParser.ruleNames;
        this.literalNames = NekoScriptParser.literalNames;
        this.symbolicNames = NekoScriptParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
        switch(ruleIndex) {
        case 5:
                        return this.numExpression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    numExpression_sempred(localctx, predIndex) {
        switch(predIndex) {
                case 0:
                        return this.precpred(this._ctx, 4);
                case 1:
                        return this.precpred(this._ctx, 3);
                case 2:
                        return this.precpred(this._ctx, 2);
                case 3:
                        return this.precpred(this._ctx, 1);
                default:
                        throw "No predicate with index:" + predIndex;
        }
    };




        program() {
            let localctx = new ProgramContext(this, this._ctx, this.state);
            this.enterRule(localctx, 0, NekoScriptParser.RULE_program);
            var _la = 0;
            try {
                this.enterOuterAlt(localctx, 1);
                this.state = 43;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1107349688) !== 0) || ((((_la - 33)) & ~0x1f) === 0 && ((1 << (_la - 33)) & 15) !== 0)) {
                    this.state = 40;
                    this.statement();
                    this.state = 45;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 46;
                this.match(NekoScriptParser.EOF);
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        statement() {
            let localctx = new StatementContext(this, this._ctx, this.state);
            this.enterRule(localctx, 2, NekoScriptParser.RULE_statement);
            try {
                this.state = 56;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
                switch(la_) {
                case 1:
                    this.enterOuterAlt(localctx, 1);
                    this.state = 48;
                    this.variableDeclaration();
                    break;

                case 2:
                    this.enterOuterAlt(localctx, 2);
                    this.state = 49;
                    this.expressionStatement();
                    break;

                case 3:
                    this.enterOuterAlt(localctx, 3);
                    this.state = 50;
                    this.functionDeclaration();
                    break;

                case 4:
                    this.enterOuterAlt(localctx, 4);
                    this.state = 51;
                    this.importStatement();
                    break;

                case 5:
                    this.enterOuterAlt(localctx, 5);
                    this.state = 52;
                    this.webSiteDeclaration();
                    break;

                case 6:
                    this.enterOuterAlt(localctx, 6);
                    this.state = 53;
                    this.ifStatement();
                    break;

                case 7:
                    this.enterOuterAlt(localctx, 7);
                    this.state = 54;
                    this.loopStatement();
                    break;

                case 8:
                    this.enterOuterAlt(localctx, 8);
                    this.state = 55;
                    this.match(NekoScriptParser.COMMENT);
                    break;

                }
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        variableDeclaration() {
            let localctx = new VariableDeclarationContext(this, this._ctx, this.state);
            this.enterRule(localctx, 4, NekoScriptParser.RULE_variableDeclaration);
            try {
                this.state = 68;
                this._errHandler.sync(this);
                switch(this._input.LA(1)) {
                case 33:
                    this.enterOuterAlt(localctx, 1);
                    this.state = 58;
                    this.match(NekoScriptParser.ID);
                    this.state = 59;
                    this.match(NekoScriptParser.T__0);
                    this.state = 60;
                    this.expression();
                    this.state = 61;
                    this.match(NekoScriptParser.T__1);
                    break;
                case 3:
                    this.enterOuterAlt(localctx, 2);
                    this.state = 63;
                    this.match(NekoScriptParser.T__2);
                    this.state = 64;
                    this.match(NekoScriptParser.T__0);
                    this.state = 65;
                    this.numExpression(0);
                    this.state = 66;
                    this.match(NekoScriptParser.T__1);
                    break;
                default:
                    throw new antlr4.error.NoViableAltException(this);
                }
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        expressionStatement() {
            let localctx = new ExpressionStatementContext(this, this._ctx, this.state);
            this.enterRule(localctx, 6, NekoScriptParser.RULE_expressionStatement);
            try {
                this.enterOuterAlt(localctx, 1);
                this.state = 70;
                this.expression();
                this.state = 71;
                this.match(NekoScriptParser.T__1);
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        expression() {
            let localctx = new ExpressionContext(this, this._ctx, this.state);
            this.enterRule(localctx, 8, NekoScriptParser.RULE_expression);
            try {
                this.state = 91;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
                switch(la_) {
                case 1:
                    localctx = new PrintExpressionContext(this, localctx);
                    this.enterOuterAlt(localctx, 1);
                    this.state = 73;
                    this.match(NekoScriptParser.T__3);
                    this.state = 74;
                    this.match(NekoScriptParser.T__0);
                    this.state = 75;
                    this.match(NekoScriptParser.T__4);
                    this.state = 76;
                    this.match(NekoScriptParser.STRING);
                    this.state = 77;
                    this.match(NekoScriptParser.T__5);
                    break;

                case 2:
                    localctx = new ImageExpressionContext(this, localctx);
                    this.enterOuterAlt(localctx, 2);
                    this.state = 78;
                    this.match(NekoScriptParser.T__6);
                    this.state = 79;
                    this.match(NekoScriptParser.T__0);
                    this.state = 80;
                    this.match(NekoScriptParser.T__4);
                    this.state = 81;
                    this.match(NekoScriptParser.STRING);
                    this.state = 82;
                    this.match(NekoScriptParser.T__5);
                    break;

                case 3:
                    localctx = new FunctionCallExpressionContext(this, localctx);
                    this.enterOuterAlt(localctx, 3);
                    this.state = 83;
                    this.functionCall();
                    break;

                case 4:
                    localctx = new NumberExpressionContext(this, localctx);
                    this.enterOuterAlt(localctx, 4);
                    this.state = 84;
                    this.numExpression(0);
                    break;

                case 5:
                    localctx = new StringExpressionContext(this, localctx);
                    this.enterOuterAlt(localctx, 5);
                    this.state = 85;
                    this.match(NekoScriptParser.STRING);
                    break;

                case 6:
                    localctx = new IdentifierExpressionContext(this, localctx);
                    this.enterOuterAlt(localctx, 6);
                    this.state = 86;
                    this.match(NekoScriptParser.ID);
                    break;

                case 7:
                    localctx = new ParenExpressionContext(this, localctx);
                    this.enterOuterAlt(localctx, 7);
                    this.state = 87;
                    this.match(NekoScriptParser.T__4);
                    this.state = 88;
                    this.expression();
                    this.state = 89;
                    this.match(NekoScriptParser.T__5);
                    break;

                }
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }


        numExpression(_p) {
                if(_p===undefined) {
                    _p = 0;
                }
            const _parentctx = this._ctx;
            const _parentState = this.state;
            let localctx = new NumExpressionContext(this, this._ctx, _parentState);
            let _prevctx = localctx;
            const _startState = 10;
            this.enterRecursionRule(localctx, 10, NekoScriptParser.RULE_numExpression, _p);
            try {
                this.enterOuterAlt(localctx, 1);
                this.state = 96;
                this._errHandler.sync(this);
                switch(this._input.LA(1)) {
                case 34:
                    localctx = new NumberLiteralContext(this, localctx);
                    this._ctx = localctx;
                    _prevctx = localctx;

                    this.state = 94;
                    this.match(NekoScriptParser.NUMBER);
                    break;
                case 33:
                    localctx = new NumIdentifierContext(this, localctx);
                    this._ctx = localctx;
                    _prevctx = localctx;
                    this.state = 95;
                    this.match(NekoScriptParser.ID);
                    break;
                default:
                    throw new antlr4.error.NoViableAltException(this);
                }
                this._ctx.stop = this._input.LT(-1);
                this.state = 112;
                this._errHandler.sync(this);
                var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
                while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                    if(_alt===1) {
                        if(this._parseListeners!==null) {
                            this.triggerExitRuleEvent();
                        }
                        _prevctx = localctx;
                        this.state = 110;
                        this._errHandler.sync(this);
                        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
                        switch(la_) {
                        case 1:
                            localctx = new AdditionContext(this, new NumExpressionContext(this, _parentctx, _parentState));
                            this.pushNewRecursionContext(localctx, _startState, NekoScriptParser.RULE_numExpression);
                            this.state = 98;
                            if (!( this.precpred(this._ctx, 4))) {
                                throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
                            }
                            this.state = 99;
                            this.match(NekoScriptParser.T__7);
                            this.state = 100;
                            this.numExpression(5);
                            break;

                        case 2:
                            localctx = new SubtractionContext(this, new NumExpressionContext(this, _parentctx, _parentState));
                            this.pushNewRecursionContext(localctx, _startState, NekoScriptParser.RULE_numExpression);
                            this.state = 101;
                            if (!( this.precpred(this._ctx, 3))) {
                                throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
                            }
                            this.state = 102;
                            this.match(NekoScriptParser.T__8);
                            this.state = 103;
                            this.numExpression(4);
                            break;

                        case 3:
                            localctx = new MultiplicationContext(this, new NumExpressionContext(this, _parentctx, _parentState));
                            this.pushNewRecursionContext(localctx, _startState, NekoScriptParser.RULE_numExpression);
                            this.state = 104;
                            if (!( this.precpred(this._ctx, 2))) {
                                throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
                            }
                            this.state = 105;
                            this.match(NekoScriptParser.T__9);
                            this.state = 106;
                            this.numExpression(3);
                            break;

                        case 4:
                            localctx = new DivisionContext(this, new NumExpressionContext(this, _parentctx, _parentState));
                            this.pushNewRecursionContext(localctx, _startState, NekoScriptParser.RULE_numExpression);
                            this.state = 107;
                            if (!( this.precpred(this._ctx, 1))) {
                                throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
                            }
                            this.state = 108;
                            this.match(NekoScriptParser.T__10);
                            this.state = 109;
                            this.numExpression(2);
                            break;

                        } 
                    }
                    this.state = 114;
                    this._errHandler.sync(this);
                    _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
                }

            } catch( error) {
                if(error instanceof antlr4.RecognitionException) {
                        localctx.exception = error;
                        this._errHandler.reportError(this, error);
                        this._errHandler.recover(this, error);
                    } else {
                        throw error;
                    }
            } finally {
                this.unrollRecursionContexts(_parentctx)
            }
            return localctx;
        }



        functionDeclaration() {
            let localctx = new FunctionDeclarationContext(this, this._ctx, this.state);
            this.enterRule(localctx, 12, NekoScriptParser.RULE_functionDeclaration);
            var _la = 0;
            try {
                this.enterOuterAlt(localctx, 1);
                this.state = 115;
                this.match(NekoScriptParser.T__11);
                this.state = 116;
                this.match(NekoScriptParser.ID);
                this.state = 117;
                this.match(NekoScriptParser.T__4);
                this.state = 119;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===33) {
                    this.state = 118;
                    this.paramList();
                }

                this.state = 121;
                this.match(NekoScriptParser.T__5);
                this.state = 122;
                this.block();
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        paramList() {
            let localctx = new ParamListContext(this, this._ctx, this.state);
            this.enterRule(localctx, 14, NekoScriptParser.RULE_paramList);
            var _la = 0;
            try {
                this.enterOuterAlt(localctx, 1);
                this.state = 124;
                this.match(NekoScriptParser.ID);
                this.state = 129;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while(_la===13) {
                    this.state = 125;
                    this.match(NekoScriptParser.T__12);
                    this.state = 126;
                    this.match(NekoScriptParser.ID);
                    this.state = 131;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        functionCall() {
            let localctx = new FunctionCallContext(this, this._ctx, this.state);
            this.enterRule(localctx, 16, NekoScriptParser.RULE_functionCall);
            var _la = 0;
            try {
                this.enterOuterAlt(localctx, 1);
                this.state = 132;
                this.match(NekoScriptParser.T__11);
                this.state = 133;
                this.match(NekoScriptParser.ID);
                this.state = 134;
                this.match(NekoScriptParser.T__4);
                this.state = 136;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(((((_la - 4)) & ~0x1f) === 0 && ((1 << (_la - 4)) & 3758096651) !== 0)) {
                    this.state = 135;
                    this.argList();
                }

                this.state = 138;
                this.match(NekoScriptParser.T__5);
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        argList() {
            let localctx = new ArgListContext(this, this._ctx, this.state);
            this.enterRule(localctx, 18, NekoScriptParser.RULE_argList);
            var _la = 0;
            try {
                this.enterOuterAlt(localctx, 1);
                this.state = 140;
                this.expression();
                this.state = 145;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while(_la===13) {
                    this.state = 141;
                    this.match(NekoScriptParser.T__12);
                    this.state = 142;
                    this.expression();
                    this.state = 147;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        importStatement() {
            let localctx = new ImportStatementContext(this, this._ctx, this.state);
            this.enterRule(localctx, 20, NekoScriptParser.RULE_importStatement);
            try {
                this.enterOuterAlt(localctx, 1);
                this.state = 148;
                this.match(NekoScriptParser.T__13);
                this.state = 149;
                this.match(NekoScriptParser.T__4);
                this.state = 150;
                this.match(NekoScriptParser.STRING);
                this.state = 151;
                this.match(NekoScriptParser.T__5);
                this.state = 152;
                this.match(NekoScriptParser.T__1);
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        webSiteDeclaration() {
            let localctx = new WebSiteDeclarationContext(this, this._ctx, this.state);
            this.enterRule(localctx, 22, NekoScriptParser.RULE_webSiteDeclaration);
            try {
                this.enterOuterAlt(localctx, 1);
                this.state = 154;
                this.match(NekoScriptParser.T__14);
                this.state = 155;
                this.match(NekoScriptParser.T__12);
                this.state = 156;
                this.match(NekoScriptParser.T__15);
                this.state = 157;
                this.webSiteBlock();
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        webSiteBlock() {
            let localctx = new WebSiteBlockContext(this, this._ctx, this.state);
            this.enterRule(localctx, 24, NekoScriptParser.RULE_webSiteBlock);
            var _la = 0;
            try {
                this.enterOuterAlt(localctx, 1);
                this.state = 159;
                this.match(NekoScriptParser.T__16);
                this.state = 163;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while((((_la) & ~0x1f) === 0 && ((1 << _la) & 32047104) !== 0)) {
                    this.state = 160;
                    this.webSiteProperty();
                    this.state = 165;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 166;
                this.match(NekoScriptParser.T__17);
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        webSiteProperty() {
            let localctx = new WebSitePropertyContext(this, this._ctx, this.state);
            this.enterRule(localctx, 26, NekoScriptParser.RULE_webSiteProperty);
            try {
                this.state = 190;
                this._errHandler.sync(this);
                switch(this._input.LA(1)) {
                case 19:
                    this.enterOuterAlt(localctx, 1);
                    this.state = 168;
                    this.match(NekoScriptParser.T__18);
                    this.state = 169;
                    this.match(NekoScriptParser.T__19);
                    this.state = 170;
                    this.match(NekoScriptParser.T__4);
                    this.state = 171;
                    this.match(NekoScriptParser.STRING);
                    this.state = 172;
                    this.match(NekoScriptParser.T__5);
                    this.state = 173;
                    this.match(NekoScriptParser.T__12);
                    break;
                case 21:
                    this.enterOuterAlt(localctx, 2);
                    this.state = 174;
                    this.match(NekoScriptParser.T__20);
                    this.state = 175;
                    this.match(NekoScriptParser.T__19);
                    this.state = 176;
                    this.match(NekoScriptParser.STRING);
                    this.state = 177;
                    this.match(NekoScriptParser.T__12);
                    break;
                case 22:
                    this.enterOuterAlt(localctx, 3);
                    this.state = 178;
                    this.match(NekoScriptParser.T__21);
                    this.state = 179;
                    this.match(NekoScriptParser.T__19);
                    this.state = 180;
                    this.match(NekoScriptParser.STRING);
                    this.state = 181;
                    this.match(NekoScriptParser.T__12);
                    break;
                case 23:
                    this.enterOuterAlt(localctx, 4);
                    this.state = 182;
                    this.match(NekoScriptParser.T__22);
                    this.state = 183;
                    this.match(NekoScriptParser.T__19);
                    this.state = 184;
                    this.match(NekoScriptParser.STRING);
                    this.state = 185;
                    this.match(NekoScriptParser.T__12);
                    break;
                case 24:
                    this.enterOuterAlt(localctx, 5);
                    this.state = 186;
                    this.match(NekoScriptParser.T__23);
                    this.state = 187;
                    this.styleBlock();
                    break;
                case 16:
                    this.enterOuterAlt(localctx, 6);
                    this.state = 188;
                    this.match(NekoScriptParser.T__15);
                    this.state = 189;
                    this.block();
                    break;
                default:
                    throw new antlr4.error.NoViableAltException(this);
                }
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        styleBlock() {
            let localctx = new StyleBlockContext(this, this._ctx, this.state);
            this.enterRule(localctx, 28, NekoScriptParser.RULE_styleBlock);
            var _la = 0;
            try {
                this.enterOuterAlt(localctx, 1);
                this.state = 192;
                this.match(NekoScriptParser.T__16);
                this.state = 196;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while(_la===33) {
                    this.state = 193;
                    this.styleProperty();
                    this.state = 198;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 199;
                this.match(NekoScriptParser.T__17);
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        styleProperty() {
            let localctx = new StylePropertyContext(this, this._ctx, this.state);
            this.enterRule(localctx, 30, NekoScriptParser.RULE_styleProperty);
            var _la = 0;
            try {
                this.enterOuterAlt(localctx, 1);
                this.state = 201;
                this.match(NekoScriptParser.ID);
                this.state = 202;
                this.match(NekoScriptParser.T__19);
                this.state = 203;
                _la = this._input.LA(1);
                if(!(_la===34 || _la===35)) {
                this._errHandler.recoverInline(this);
                }
                else {
                        this._errHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 204;
                this.match(NekoScriptParser.T__12);
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        ifStatement() {
            let localctx = new IfStatementContext(this, this._ctx, this.state);
            this.enterRule(localctx, 32, NekoScriptParser.RULE_ifStatement);
            var _la = 0;
            try {
                this.enterOuterAlt(localctx, 1);
                this.state = 206;
                this.match(NekoScriptParser.T__24);
                this.state = 207;
                this.match(NekoScriptParser.T__4);
                this.state = 208;
                this.condition();
                this.state = 209;
                this.match(NekoScriptParser.T__5);
                this.state = 210;
                this.block();
                this.state = 213;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===26) {
                    this.state = 211;
                    this.match(NekoScriptParser.T__25);
                    this.state = 212;
                    this.block();
                }

            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        condition() {
            let localctx = new ConditionContext(this, this._ctx, this.state);
            this.enterRule(localctx, 34, NekoScriptParser.RULE_condition);
            try {
                this.state = 228;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,15,this._ctx);
                switch(la_) {
                case 1:
                    this.enterOuterAlt(localctx, 1);
                    this.state = 215;
                    this.expression();
                    break;

                case 2:
                    this.enterOuterAlt(localctx, 2);
                    this.state = 216;
                    this.expression();
                    this.state = 217;
                    this.match(NekoScriptParser.T__26);
                    this.state = 218;
                    this.expression();
                    break;

                case 3:
                    this.enterOuterAlt(localctx, 3);
                    this.state = 220;
                    this.expression();
                    this.state = 221;
                    this.match(NekoScriptParser.T__27);
                    this.state = 222;
                    this.expression();
                    break;

                case 4:
                    this.enterOuterAlt(localctx, 4);
                    this.state = 224;
                    this.expression();
                    this.state = 225;
                    this.match(NekoScriptParser.T__28);
                    this.state = 226;
                    this.expression();
                    break;

                }
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        loopStatement() {
            let localctx = new LoopStatementContext(this, this._ctx, this.state);
            this.enterRule(localctx, 36, NekoScriptParser.RULE_loopStatement);
            try {
                this.enterOuterAlt(localctx, 1);
                this.state = 230;
                this.match(NekoScriptParser.T__29);
                this.state = 231;
                this.match(NekoScriptParser.T__4);
                this.state = 232;
                this.match(NekoScriptParser.ID);
                this.state = 233;
                this.match(NekoScriptParser.T__30);
                this.state = 234;
                this.numExpression(0);
                this.state = 235;
                this.match(NekoScriptParser.T__31);
                this.state = 236;
                this.numExpression(0);
                this.state = 237;
                this.match(NekoScriptParser.T__5);
                this.state = 238;
                this.block();
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }



        block() {
            let localctx = new BlockContext(this, this._ctx, this.state);
            this.enterRule(localctx, 38, NekoScriptParser.RULE_block);
            var _la = 0;
            try {
                this.enterOuterAlt(localctx, 1);
                this.state = 240;
                this.match(NekoScriptParser.T__16);
                this.state = 244;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1107349688) !== 0) || ((((_la - 33)) & ~0x1f) === 0 && ((1 << (_la - 33)) & 15) !== 0)) {
                    this.state = 241;
                    this.statement();
                    this.state = 246;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 247;
                this.match(NekoScriptParser.T__17);
            } catch (re) {
                if(re instanceof antlr4.RecognitionException) {
                        localctx.exception = re;
                        this._errHandler.reportError(this, re);
                        this._errHandler.recover(this, re);
                    } else {
                        throw re;
                    }
            } finally {
                this.exitRule();
            }
            return localctx;
        }


}
